# ai-vpn-firewall

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  features.yaml  paths.yaml  splits.yaml
data/processed/vnat/: flows.parquet  xgb_features.parquet
data/splits/: vnat_test_captures.txt  vnat_train_captures.txt  vnat_val_captures.txt
notebooks/: 01_build_flows.ipynb  01_build_flows_vnat.ipynb  02_capture_based_split.ipynb  03_extract_features.ipynb  04_sequences_cnn.ipynb  05_calibrate_xgboost.ipynb  05b_optuna_tune_xgb.ipynb  06_train_ensemble.ipynb  07_ensemble_tune_on_val.ipynb  08_eval_all_datasets.ipynb
src/cli/: run_extract_features.py
src/features/: extract.py  histograms.py  window_quality.py
src/models/: cnn_arch.py
src/pipeline/: artifacts.py  feature_pipeline.py
src/splits/: io.py  make_split.py  validate.py
src/utils/: logging.py  paths.py  seed.py
