[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vpn-firewall"
version = "0.1.0"
description = "VPN detection via flow metadata (VNAT/ISCX)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "pyarrow>=12.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "matplotlib>=3.7"
]
ensemble = [
  "lightgbm>=4.0",
  "catboost>=1.2"
]
dev = [
  "ruff>=0.5",
  "black>=24.0",
  "pytest>=7.4",
  "mypy>=1.8",
  "types-PyYAML>=6.0.12"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
